@@ -1,3 +1,9 @@
+2013-03-06 Max Baak <mbaak@cern.ch>
+	M       setup.sh
+	* Now points to root 5.34.05, to solve this bug:
+	https://savannah.cern.ch/bugs/?98832
+	* and the histfactory bin width bug.
+
 2013-03-05 Max Baak <mbaak@cern.ch>
 	M src/toy_utils.cxx
 	* Don't reject failed fits, but flag them in list file.
